wordpress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy
  namespace: production
  labels:
   app: wordpress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-app
  template:
    metadata:
      labels:
        app: wordpress-app
    spec:
      containers:
      - name: wordpress-container
        image: wordpress:4.8-apache
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
          - name: wordpress-volume
            mountPath: /var/www/html
      volumes:
        - name: wordpress-volume
          persistentVolumeClaim:
            claimName: wordpress-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: production
  labels:
    name: wordpress-service
spec:
#  type: NodePort
  ports:
    - port: 80
      targetPort: 80
#      nodePort: 30005
  selector:
    app: wordpress-app
